// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container allows additional classes to be passed through 1`] = `
<div>
  <div
    class="container fixed test-class"
  />
</div>
`;

exports[`Container has a container and fixed class by default 1`] = `
<div>
  <div
    class="container fixed "
  />
</div>
`;

exports[`Container renders correctly without props 1`] = `
<div>
  <div
    class="container fixed "
  />
</div>
`;
